# GSolaar

./: AUTHORS-en.txt  AUTHORS-fr.txt  ChangeLog  INSTALL  INSTALL-en.txt  INSTALL-fr.txt  Makefile.am  Makefile.in  README  TODO.txt  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
m4/: ChangeLog  gtk-2.0.m4  gtkglext-1.0.m4
man/: solaar.1
po/: ChangeLog  GSolaar.pot  LINGUAS  Makevars  POTFILES.in  br.gmo  br.po  en.gmo  en.po  es.gmo  es.po  fr.gmo  fr.po  ru.gmo  ru.po
src/: Makefile.am  Makefile.in  gsolaar.c  solaar.c
src/core/: Makefile.am  Makefile.in  saa-core.h  saa-geometrie.c  saa-geometrie.h  saa-i18n.h  saa-solide.c  saa-solide.h  saa-traitement.c  saa-traitement.h  saa-utils.c  saa-utils.h  saa-visuel.c  saa-visuel.h
src/export/: Makefile.am  Makefile.in  saa-export.h  saa-patron.c  saa-patron.h  saa-sketchup.c  saa-sketchup.h
src/kaleido/: Makefile.am  Makefile.in  kaleido.c  kaleido.h
src/share/images/: Makefile.am  Makefile.in
src/widgets/: Makefile.am  Makefile.in  saa-drawingarea.c  saa-drawingarea.h  saa-exportdialog.c  saa-exportdialog.h  saa-mainwindow.c  saa-mainwindow.h  saa-soliddisplay.c  saa-soliddisplay.h  saa-solidhandler.c  saa-solidhandler.h  saa-solidmanager.c  saa-solidmanager.h  saa-treeview.c  saa-treeview.h  saa-widgets.h
