INCLUDES = -I$(top_srcdir)				\
		   -I$(top_srcdir)/src/kaleido	\
		   -I$(top_srcdir)/src/core		\
		   -I$(top_srcdir)/src/export

noinst_LIBRARIES = libsaawidgets.a

libsaawidgets_a_SOURCES =	saa-widgets.h							\
							saa-drawingarea.c	saa-drawingarea.h	\
 							saa-soliddisplay.c	saa-soliddisplay.h	\
 							saa-solidhandler.c 	saa-solidhandler.h	\
							saa-treeview.c		saa-treeview.h		\
							saa-solidmanager.c	saa-solidmanager.h	\
							saa-mainwindow.c	saa-mainwindow.h	\
							saa-exportdialog.c  saa-exportdialog.h
 